# TermType

./: .gitignore  CMakeLists.txt
src/: api.c  api.h  csv.c  csv.h  ir.c  main.c  menu.c  record.c  result.c  scene.h  typing.c  word.c  word.h
